# PolyNom

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  TDLR_slides.md  TLDR_slides.md  annotated.html  classes.html  client.c  client.h  coverage.sh  dir_000002_000000.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5a30104352ef4255dc24354b02eb2d20_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_a065c5f60305fee3569f887679366939.html  dir_a065c5f60305fee3569f887679366939_dep.map  dir_a065c5f60305fee3569f887679366939_dep.md5  doxygen_crawl.html  files.html  footer.html  fp__integer_8h.html  fp__integer_8h__incl.map  fp__integer_8h__incl.md5  fp__integer_8h_source.html  fp__poly_8h.html  fp__poly_8h__incl.map  fp__poly_8h__incl.md5  fp__poly_8h_source.html  git-conventional-commits.yaml  globals.html  globals_enum.html  globals_func.html  graph_legend.html  header.html  index.html  (+30 more)
.git-hooks/: commit-msg
.github/workflows/: documentation.yml  main.yml
Doxygen/: annotated.html  classes.html  dir_000002_000000.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5a30104352ef4255dc24354b02eb2d20_dep.map  dir_5a30104352ef4255dc24354b02eb2d20_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_a065c5f60305fee3569f887679366939.html  dir_a065c5f60305fee3569f887679366939_dep.map  dir_a065c5f60305fee3569f887679366939_dep.md5  files.html  fp__integer_8h.html  fp__integer_8h__incl.map  fp__integer_8h__incl.md5  fp__integer_8h_source.html  fp__poly_8h.html  fp__poly_8h__incl.map  fp__poly_8h__incl.md5  fp__poly_8h_source.html  globals.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  list_8h.html  list_8h__dep__incl.map  list_8h__dep__incl.md5  list_8h__incl.map  list_8h__incl.md5  list_8h_source.html  structfp__field__t-members.html  structfp__field__t.html  structfp__field__t__coll__graph.map  structfp__field__t__coll__graph.md5  structfp__poly__t-members.html  structfp__poly__t.html  structfp__poly__t__coll__graph.map  structfp__poly__t__coll__graph.md5  (+12 more)
Doxygen/search/: all_0.js  all_3.js  all_8.js  all_9.js  classes_0.js  enums_0.js  files_0.js  functions_1.js  functions_5.js  functions_6.js  searchdata.js
TLDR_slides/: index.html
TLDR_slides/css/: mermaid.css  mermaid2.css
cmake/: FindGMP.cmake
coverage/: coverage.client.c.50898f0cb35139d87132f4732a029213.html  coverage.fp_integer.c.bff38be422f1386f6d81c637c4b9c472.html  coverage.fp_poly.c.2cae3d8f472621eaa36dc16731fc05c2.html  coverage.functions.html  coverage.html  coverage.list.c.c359e484a98346c426dc7ea0a6fd478e.html  coverage.main.c.2045016cb90d1e65d71c2407a2570927.html  coverage.util.c.64497c7f2163a72b81ffc63559de1637.html
docs/: Doxyfile
fp_poly/: CMakeLists.txt
fp_poly/include/: fp_poly.h
fp_poly/src/: fp_poly.c
fp_poly/tests/: generate_input.gp  test_add.c  test_parse.c  test_util.c
lib/: CMakeLists.txt
lib/include/: fp_integer.h  fp_poly.h  list.h  util.h
lib/src/: fp_integer.c  fp_poly.c  list.c  util.c
list/: CMakeLists.txt
list/include/: list.h
list/src/: list.c
list/tests/: test_list.c  test_list_malloc.c
scripts/: gen-docs.sh
search/: all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_b.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
tests/: CMakeLists.txt
tests/fp_integer/: CMakeLists.txt  generate_input_integer.gp  test_gcd_ext.c  test_random_prime.c  verify_input.gp  verify_input_prime.gp
tests/fp_poly/: CMakeLists.txt  arg_pari_gp.gp  generate_input.gp  test_add.c  test_assert.c  test_div.c  test_gcd.c  test_gcd_ext.c  test_init_and_free.c  test_irred_check.c  test_irred_generation.c  test_mul.c  test_mul_fq.c  test_parse.c  test_print.c  test_static.c  test_sub.c  test_util.c  verify_input_poly.gp
tests/list/: CMakeLists.txt  test_list.c  test_list_malloc.c
