add_library(util STATIC src/util.c)
target_include_directories(util PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(util PRIVATE ${GMP_LIBRARIES})

add_library(fp_integer STATIC src/fp_integer.c)
target_include_directories(fp_integer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(fp_integer PRIVATE ${GMP_LIBRARIES})
target_link_libraries(fp_integer PRIVATE util)

add_library(fp_poly STATIC src/fp_poly.c)
target_include_directories(fp_poly PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(fp_poly PRIVATE ${GMP_LIBRARIES})
target_link_libraries(fp_poly PRIVATE util)
target_link_libraries(fp_poly PRIVATE list_lib)
target_link_libraries(fp_poly PRIVATE fp_integer)