add_executable(list test_list.c)
target_include_directories(list PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
target_link_libraries(list PRIVATE list_lib)
add_test(NAME list COMMAND list)
set_tests_properties(list PROPERTIES LABELS "list")
add_test(NAME list_memory COMMAND valgrind ./list)
set_tests_properties(list_memory PROPERTIES TIMEOUT 10 PASS_REGULAR_EXPRESSION "ERROR SUMMARY: 0 errors.*")
set_tests_properties(list_memory PROPERTIES LABELS "list;memory")

add_executable(list_mock_malloc test_list_malloc.c)
target_include_directories(list_mock_malloc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
target_link_libraries(list_mock_malloc PRIVATE list_malloc)
add_test(NAME list_mock_malloc COMMAND list_mock_malloc)
set_tests_properties(list_mock_malloc PROPERTIES LABELS "list;mock")